nginx-ingress/beer-wine/beer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beer  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beer
  template:
    metadata:
      labels:
        app: beer
    spec:
      containers:
      - name: beer
        image: nirulabs/beer
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: beer  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: beer
