nginx-ingress/beer-wine/wine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wine  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wine
  template:
    metadata:
      labels:
        app: wine
    spec:
      containers:
      - name: wine
        image: nirulabs/wine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wine  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: wine
